--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,10 @@
         "php": ">=5.5.9",
         "laravel/framework": "5.2.*",
         "laravelcollective/html": "^5.2",
-        "dflydev/apache-mime-types": "^1.0"
+        "dflydev/apache-mime-types": "^1.0",
+        "doctrine/dbal": "^2.5",
+        "michelf/php-smartypants": "1.6.0-beta1",
+        "michelf/php-markdown": "^1.6"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
